add in custom CSS styles

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     
    <div class="container">
       <div class="row">
+        <h3 class="header">Vacation Packages</h3>
         <div class="col-md-4">
           <img src="img/third.jpg" alt="Third circle of hell">
           <p>
-            Third Circle
-            <br>
+            <h3>Third Circle</h3>
             $666 Per night 
             <br>
-            ETERNITY
+           <div class="time">ETERNITY</div>
           </p>
           <ul>
             <li>buffet of the damned</li>
@@ -33,15 +33,15 @@
             <li>mud</li>
             <li>get ripped and flayed by Cerebus</li>
           </ul>   
+          
        </div>
         <div class="col-md-4">
           <img src="img/seventh.jpg" alt="Seventh circle of hell">
           <p>
-            Seventh Circle
-            <br>
+            <h3>Seventh Circle</h3>
             $666 Per night 
             <br>
-            ETERNITY
+            <div class="time">ETERNITY</div>
           </p>
           <ul>
             <li>see a boiling river of blood</li>
@@ -52,12 +52,12 @@
           </ul>
         </div>
           <div class="col-md-4">
+            <img src="img/second.jpg" alt="Second circle of hell">
             <p>
-              Second Circle
-              <br>
+              <h3>Second Circle</h3>
               $666 Per night 
               <br>
-              YOU'RE LITERALLY HERE FOREVER
+              <div class="time">YOU'RE LITERALLY HERE FOREVER</div>
             </p>
             <ul>
               <li>where the beautiful scenery is described as "a place where no thing gleams."</li>
